--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           <h2>Password Generator Application</h2>
           
           <div id="user_option" class="user_option">
-            <h4>Select your required password length</h4>
+            <h4><u>Select required password length</u></h4>
               <div class="option">
                   <label>Password Length</label>
                   <input type="number" id="length" min="8" max="128" value="10">
               </div>
 
-              <h4>Choose the character types to include in your password</h4>
+              <h4><u>Select character types to include password</u></h4>
               <div class="option">
                 
                   <label>Lowercase</label>
