Corrected typo in html file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <input type="number" class= "larger" id="length" min="8" max="128" value="10">
               </div>
 
-              <h4><u>Select character types to include password</u></h4>
+              <h4><u>Select character types to include inpassword</u></h4>
               <div class="option">
                 
                   <label>Lowercase</label>
