Changed name of symbols checkbox to special, edited readme, and js comments

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <input type="checkbox" id="numbers" class="numbers">
               </div>
               <div class="option">
-                  <label>Symbols</label>
+                  <label>Special</label>
                   <input type="checkbox" id="symbols" class="symbols">
               </div>
           </div>
